# CERT

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: camera.h  color.h  dynamic_array.h  image.h  light.h  main  main.cpp  material.h  ray.h  raytracer.h  rect.h  runtime.cpp  shape.h  sphere.h  unique_ptr.h  util.h  vec3.h  world.h
src/threads/: thread_0.cpp  thread_0.h  thread_1.cpp  thread_1.h  thread_10.cpp  thread_11.cpp  thread_2.cpp  thread_2.h  thread_3.cpp  thread_3.h  thread_4.cpp  thread_5.cpp  thread_6.cpp  thread_7.cpp  thread_8.cpp  thread_9.cpp  threads.h
test/: test_main.cpp  test_ray.h  test_util.h  test_vec3.h
